@@ -248,6 +248,9 @@ enabled by the 'simplerpc' option.</p>
 <tr><td valign="top"><a href="#decode_init-0">decode_init/0</a></td><td></td></tr>
 <tr><td valign="top"><a href="#encode-1">encode/1</a></td><td></td></tr>
 <tr><td valign="top"><a href="#encode-2">encode/2</a></td><td></td></tr>
+<tr><td valign="top"><a href="#proto_driver-0">proto_driver/0</a></td><td></td></tr>
+<tr><td valign="top"><a href="#proto_packet_type-0">proto_packet_type/0</a></td><td></td></tr>
+<tr><td valign="top"><a href="#proto_vsn-0">proto_vsn/0</a></td><td></td></tr>
 </table>
 
 <h2><a name="functions">Function Details</a></h2>
@@ -295,6 +298,21 @@ enabled by the 'simplerpc' option.</p>
 <h3 class="function"><a name="encode-2">encode/2</a></h3>
 <div class="spec">
 <p><tt>encode(X, Mod) -&gt; any()</tt></p>
+</div>
+
+<h3 class="function"><a name="proto_driver-0">proto_driver/0</a></h3>
+<div class="spec">
+<p><tt>proto_driver() -&gt; any()</tt></p>
+</div>
+
+<h3 class="function"><a name="proto_packet_type-0">proto_packet_type/0</a></h3>
+<div class="spec">
+<p><tt>proto_packet_type() -&gt; any()</tt></p>
+</div>
+
+<h3 class="function"><a name="proto_vsn-0">proto_vsn/0</a></h3>
+<div class="spec">
+<p><tt>proto_vsn() -&gt; any()</tt></p>
 </div>
 <hr>
 
